swagger create customer
