# swagger/v1/swagger.yaml
@@ -4,7 +4,119 @@ info:
   title: API V1
   version: v1
 paths:
-  "/api/v1/tags/{id}":
+  "/api/customers/{id}":
+    get:
+      summary: Get Customer
+      tags:
+      - Customer
+      consumes:
+      - application/json
+      parameters:
+      - name: id
+        in: path
+        type: integer
+        required: true
+      responses:
+        '200':
+          description: Customer Found
+          schema:
+            type: object
+            properties:
+              id:
+                type: integer
+              name:
+                type: string
+              email:
+                type: string
+              type: object
+              form:
+                id:
+                  type: integer
+                name:
+                  type: string
+              created_at:
+                type: string
+  "/api/customers":
+    post:
+      summary: Create Customer
+      tags:
+      - Customer
+      consumes:
+      - application/json
+      parameters:
+      - name: customer
+        in: body
+        schema:
+          type: object
+          properties:
+            name:
+              type: string
+              example: Kent Beck
+            email:
+              type: string
+              example: kentbeck@gmail.com
+            form_id:
+              type: integer
+              example: 1
+          required:
+          - name
+          - email
+      responses:
+        '201':
+          description: Customer Created
+          schema:
+            type: object
+            properties:
+              id:
+                type: integer
+              name:
+                type: string
+              email:
+                type: string
+              type: object
+              form:
+                id:
+                  type: integer
+                name:
+                  type: string
+              created_at:
+                type: string
+            required:
+            - name
+            - email
+  "/api/forms/{id}":
+    get:
+      summary: Get Form
+      tags:
+      - Form
+      consumes:
+      - application/json
+      parameters:
+      - name: id
+        in: path
+        type: integer
+        required: true
+      responses:
+        '200':
+          description: Tag Found
+          schema:
+            type: object
+            properties:
+              id:
+                type: integer
+              name:
+                type: string
+              type: object
+              tag:
+                id:
+                  type: integer
+                name:
+                  type: string
+              created_at:
+                type: string
+              updated_at:
+                type: string
+  "/api/tags/{id}":
     get:
       summary: Get Tag
       tags:
